[package]
name = "mursten_vulkan_backend"
version = "0.1.0"
authors = ["Nikita Zdanovitch <nzdanovitch@gmail.com>"]

[dependencies]
cgmath = "0.14.1"
ggez = "0.4"
image = "0.19.0"
log = "0.4"
markov = "1.0.2"
mursten = { git = "https://github.com/teglvaerk/mursten.git" }
mursten_blocks = { git = "https://github.com/teglvaerk/mursten-blocks.git" }
nalgebra = "0.16"
piston2d-graphics = "0.26.0"
piston_window = "0.80.0"
pretty_env_logger = "0.2"
rand = "0.4"
reqwest = "0.8.6"
time = "0.1.37"
vulkano = "0.9"
vulkano-shader-derive = "0.9"
vulkano-win = "0.9"
winit = "0.11"
